--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react-bootstrap": "^2.6.0"
   }
 }
